update: fixed weird gap on the bottom of footer

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,10 @@
   font-family: var(--font-unbounded);
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -24,7 +28,6 @@
 }
 
 body {
-  background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
